# rasedi-python-sdk

./: README.md  pyproject.toml
src/miropay_payment_sdk/: client.py
src/rasedi_payment_sdk/: __init__.py  client.py  interface.py
