[project]
name = "rasedi-payment-sdk"
version = "1.0.7"
description = "Official Python SDK for the Rasedi API"
readme = "README.md"
requires-python = ">=3.0"
dependencies=[
    "httpx",
    "typing",
    "cryptography",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"